# miniature-octo-adventure

./: .travis.yml  README.md  conan-run-from-build-dir.sh  conanfile.txt
data/: appearances.txt  world.txt
data/maps/: unbenannt.tmx
data/sprites/: dyn_test_1.pdn  nw_dirt_on_grass_32.pdn  sw_dirt_on_grass_32.pdn  w_dirt_e_grass_32.pdn
data/sprites/untamed.wild-refuge.net/: credit.txt
data/sprites/untamed.wild-refuge.net/environment/: cafe.tsx
src/: CMakeLists.txt
src/base/: CMakeLists.txt  adventure_state.c  adventure_state.h  algorithm.c  algorithm.h  allocator.c  allocator.h  avatar_controller.c  avatar_controller.h  bool.h  camera.c  camera.h  config.h  entity.c  entity.h  fauna.c  fauna.h  game.c  game.h  game_state.c  game_state.h  min_max.h  minmax.h  npc.c  npc.h  number_generator.c  number_generator.h  ptr_vector.c  ptr_vector.h  rectangle.h  saturating_int.h  save.c  save.h  serialization.h  spacial_finder.c  spacial_finder.h  stringize.h  tile_grid.c  tile_grid.h  timespan.h  (+12 more)
src/cmake/: FindJansson.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
src/frontend/: CMakeLists.txt  frontend.h
src/game/: CMakeLists.txt  main.c
src/gui/: CMakeLists.txt  button.c  button.h  label.c  label.h  labeled_button.c  labeled_button.h  padding.c  padding.h  panel.c  panel.h  renderer.c  renderer.h  widget.c  widget.h
src/nds_main/: .gitignore  Makefile  debug.sh  nds_main.c
src/sdl_frontend/: CMakeLists.txt  adventure_state_view.c  adventure_state_view.h  appearance.c  appearance.h  avatar_controller.c  camera.c  camera.h  data.c  data.h  font_manager.c  font_manager.h  game_state_view.c  game_state_view.h  gui_renderer.c  gui_renderer.h  image_manager.c  image_manager.h  path.c  path.h  sdl_frontend.c  sdl_frontend.h  texture_ref.c  texture_ref.h
src/test/: CMakeLists.txt  all_tests.c  all_tests.h
src/test_main/: CMakeLists.txt  test_main.c
